Fix base path and homepage for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DevashreeS17.github.io/everlist",
+  "homepage": "https://DevashreeS17.github.io/Everlist",
   "name": "everlist-app",
   "version": "1.0.0",
   "private": true,
